--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,19 @@
             android:value="@string/map_api_key" />
 
         <activity
-            android:name=".UserPhoneVerificationActivity"
-            android:screenOrientation="portrait">
+            android:name=".SplashActivity"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".UserPhoneVerificationActivity"
+            android:screenOrientation="portrait">
+
         </activity>
 
         <meta-data
@@ -61,12 +67,13 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".BoardSentHistory"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".BoardHomeActivity"/>
+            android:parentActivityName=".BoardHomeActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".BoardNewNotificationActivity"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".BoardHomeActivity"/>
+            android:parentActivityName=".BoardHomeActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
